# hipDNNEP

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
.agents/plugins/: marketplace.json
.beads/: issues.jsonl
.claude/agents/: code-reviewer.md  implementer.md  pm.md
.claude/skills/pm/: SKILL.md
.claude/skills/review/: SKILL.md
docs/: hipDNN_conv_test_results.md
docs/TorchMLIRAsIR/: FeasibilityAnalysis.md  ImplementationPlan.md  Report.md  TwoConvsWalkthrough.md
docs/hipBLASLT/: plan.md  summary.md
include/: CMakeLists.txt
include/hipdnn_ep/: blas_graph.h  ep.h  ep_factory.h  ep_utils.h  hipdnn_graph.h  ir_builder.h  kernel.h  memcpy_kernel.h
include/hipdnn_ep/blas_graph/: blas_graph.h
include/hipdnn_ep/core/: ep.h  ep_allocator.h  ep_data_transfer.h  ep_factory.h  ep_utils.h  kernel.h  node_compute_info.h  ort_api.h
include/hipdnn_ep/hipdnn_dialect/: BufferizableOpInterfaceImpl.h  CMakeLists.txt  HipDNNDialect.h  HipDNNDialect.td  HipDNNOps.td
include/hipdnn_ep/hipdnn_graph/: ep_status.h  hipdnn_graph.h
include/hipdnn_ep/pointwise_graph/: pointwise_graph.h
include/hipdnn_ep/reduction/: reduction_graph.h
include/hipdnn_ep/torch_mlir_graph/: CMakeLists.txt  ir_builder.h  passes.h  passes.td
include/hipdnn_ep/utils/: ep_utils.h
plugins/hipdnnep-codex/.codex-plugin/: plugin.json
plugins/hipdnnep-codex/skills/implementer/: SKILL.md
plugins/hipdnnep-codex/skills/pm/: SKILL.md
plugins/hipdnnep-codex/skills/review/: SKILL.md
scripts/: build_torch_mlir.sh  hipdnn-codex-sandbox.sh  hipdnn-sandbox.sh  setup-bwrap-apparmor.sh
src/: CMakeLists.txt  blas_graph.cc  ep.cc  ep_allocator.cc  ep_data_transfer.cc  ep_factory.cc  ep_utils.cc  hipdnn_graph.cc  ir_builder.cc  kernel.cc  memcpy_kernel.cc
src/blas_graph/: CMakeLists.txt  blas_graph.cc
src/core/: CMakeLists.txt  ep.cc  ep_allocator.cc  ep_data_transfer.cc  ep_factory.cc  ep_utils.cc  hipdnn_ep_exports.cc  kernel.cc  node_compute_info.cc
src/hipdnn_dialect/: BufferizableOpInterfaceImpl.cpp  CMakeLists.txt  HipDNNDialect.cpp
src/hipdnn_graph/: CMakeLists.txt  hipdnn_backend_shim.cc  hipdnn_graph.cc
src/pointwise_graph/: CMakeLists.txt  pointwise_graph.cc
src/reduction/: CMakeLists.txt  reduction_graph.cc
src/torch_mlir_graph/: CMakeLists.txt  hipdnn_backend_legalize_pass.cc  hipdnn_finalize_memrefs_pass.cc  hipdnn_graph_to_executable_pass.cc  hipdnn_offload_pass.cc  ir_builder.cc  passes.cc
src/utils/: CMakeLists.txt  ep_utils.cc
test/: CMakeLists.txt  conv_bias_test.onnx  conv_bias_test_bias.npy  conv_bias_test_weights.npy  gen_conv_model.py  gen_matmul_model.py  test_conv.cc  test_ep_load.cc  test_hipdnn_conv.cc  test_matmul.cc  test_miopen_conv.cc
test/common/: ep_test_base.h
test/core/: CMakeLists.txt  test_ep_load.cc
test/hipblaslt/: CMakeLists.txt  gen_matmul_model.py  gen_matmulnbits_model.py  test_matmul.cc  test_matmulnbits.cc
test/hipdnn/: CMakeLists.txt  gen_conv_model.py  gen_gqa_model.py  gen_mha_model.py  gen_pointwise_model.py  gen_reduction_model.py  gen_rope_model.py  gen_simplified_layer_norm_model.py  gen_unary_pointwise_model.py  sdpa_test_base.h  test_conv.cc  test_gqa.cc  test_mha.cc  test_pointwise.cc  test_reduction.cc  test_rope.cc  test_sigmoid.cc  test_simplified_layer_norm.cc
test/lit/: gen_test_models.py  lit.cfg.py  lit.site.cfg.py.in
test/torch_mlir/: CMakeLists.txt  gen_test_models.py  lit.cfg.py  lit.site.cfg.py.in
test/torch_mlir/ep/: gen_test_models.py
test/torch_mlir/passes/: hipdnn_backend_legalize.mlir  hipdnn_bufferize.mlir  hipdnn_finalize_memrefs.mlir  hipdnn_graph_to_executable.mlir  hipdnn_offload.mlir  hipdnn_offload_pipeline.mlir
tools/: CMakeLists.txt  hipdnn-onnx-to-torch-mlir.cc
tools/hipdnn_ep_opt/: CMakeLists.txt  hipdnn-ep-opt.cc
tools/hipdnn_onnx_to_torch_mlir/: CMakeLists.txt  hipdnn-onnx-to-torch-mlir.cc
